Added stylesheets & js; tweaked frontend

--- a/public/article.html
+++ b/public/article.html
@@ -34,7 +34,7 @@
 	            </div>
             	<img class="logo" src="img/generic-logo.png" data-0="transform:rotate(0deg);" data-end="transform:rotate(360deg);">
             	<div id="menu-links">
-            		<a href="index.html">Home</a>
+                <a href="home.html">Home</a>
 	            	<a href="article.html">Article</a>
 	                <a href="page.html">Page</a>
 	                <a href="credits.html">Credits</a>
